--- a/index.html
+++ b/index.html
@@ -3,10 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Welcome to Your home</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>hello</h1>
+    <header>
+           <div class="nav-container">
+            <div class="logo">
+                <img src="./assets/logo/logo.png" alt="">
+            </div>
+            <div class="menus">
+                <li>Home</li>
+                <li>Service</li>
+                <li>About</li>
+                <li>Contact</li>
+
+            </div>
+           </div>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
