--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
 
             </div>
            </div>
+           <div class="banner-container">
+            <div class="banner-info">
+                <h1 class="banner-heading"><span class="digital">Digital</span> Agency You <br> Can Rely Upon ! </h1>
+                <p class="banner-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit modi, dolores eos culpa porro architecto dolorem alias provident, delectus assumenda laborum doloribus illo sint fugit repellendus perspiciatis eum excepturi. Cupiditate.</p>
+                <button class="btn bg-primary" >Discover me</button>
+                <button class="btn" >Hire Us Now</button>
+            </div>
+
+           </div>
     </header>
     <main>
 
